tests/e2e/fail/raw_os_str.ep
# COMPILE_ERROR: argument 1 of 'os.lstrlenA' expects ptr, got str
fun main(): void {
    print(itoa(os.lstrlenA("abc")))
}
